--- a/lib/active_force/config.yml
+++ b/lib/active_force/config.yml
@@ -1,5 +1,5 @@
-username: gove.maxwell+sfdc_trailhead@gmail.com
-password: FUD-QEe-r8x-WzX
-consumer_key: 3MVG9g9rbsTkKnAWm9jcF_2E6.yEYOLrHVVz8AWKrlfBtQn4cKi6clfdlle_EJQOKkjhZwEsBUdI67bakDi.5
-consumer_secret: '3010313896557480653'
-security_token: 4G3zVSHRoTur3JdWAzFqBrfMJ
+username: gove.maxwell+sfdc_dev@gmail.com
+password: DECzEE4IT5g962QtayeHujAfX
+consumer_key: 3MVG9dZJodJWITSurCkBb6_u0w.xhnTRBL36vwbPK6T.LsDuAaRY7EO.Ssbo8gjuxml1QrkIZdqGmjOq7_mnn
+consumer_secret: '588476266260761434'
+security_token: aJAG1qHb3RMlFLMdGmconOyZc
